add: 支持发送知乎openapi
